# SkillCPD

./: README.md  index.html  index.md
IntentionRecognition/real_with_refine/src/dong/: CMakeLists.txt  package.xml  setup.py
IntentionRecognition/real_with_refine/src/dong/note/: Evaluation with refinement.ipynb  Maximum log likelihood.ipynb  check_record.py  cpd_test.py  data_half.txt  demo_0.py  demonstration.txt  network_pub.py  online_record.py  pbdlib - HSMM.ipynb  record.py  record_demo.py  repro.txt  test_pub.py  test_record.py  trajectory_pub.py
IntentionRecognition/real_with_refine/src/dong/note/.ipynb_checkpoints/: Maximum log likelihood-checkpoint.ipynb  cpd-checkpoint.ipynb  icp-checkpoint.ipynb
IntentionRecognition/real_with_refine/src/dong/note/DemoData/: demoA1.npy  demoA3.npy  demoA5.npy  demoA8.npy  demoA9.npy  demoB.npy  demoB1.npy  demoB3.npy  demoB5.npy  demoB7.npy  demoB8.npy  demoB9.npy  demoBhalf.npy  demoC2.npy  demoC3.npy  demoC5.npy  demoC6.npy  demoC7.npy  demoC_test.npy  demoChalf.npy  demoD1.npy  demoD3.npy  demoD5.npy  demoD7.npy  demoE.npy  demoF.npy  demoF2.npy  demoF3.npy  demoG.npy  demoG1.npy  demoG2.npy  demoH2.npy  demoH4.npy
IntentionRecognition/real_with_refine/src/dong/note/Evaluation/: A_demonstration.txt  A_demonstration_1.txt  A_pred.npy  A_pred_1.npy  B_demonstration.txt  B_pred.npy  C_demonstration.txt  C_demonstration_1.txt  C_demonstration_3.txt  C_pred.npy  C_pred_1.npy  C_pred_3.npy  D_demonstration.txt  D_demonstration_1.txt  D_demonstration_2.txt  (+109 more)
IntentionRecognition/real_with_refine/src/dong/pbdlib/: functions.py  hmm.py  hsmm.py  model.py
(+275 files in other folders)
